--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 # 通用数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/student_info?serverTimezone=GMT%2B8
+    url: jdbc:mysql://192.168.1.105:3306/student_info?serverTimezone=GMT%2B8
     username: root
     password: root
     hikari:
